# CSCI-5551-ROS2-Final

./: .gitignore  README.md
bungee/: package.xml  setup.py
bungee/bungee/: velocity_control.py  xbox_in.py
bungee/launch/: bungee_control.launch.py
src/bungee/: package.xml  setup.cfg  setup.py
src/bungee/bungee/: control.py  read_vr.py  velocity_control.py  walking_setpoint.py
src/bungee/bungee_msgs/: CMakeLists.txt  package.xml
src/bungee/launch/: bungee_control.launch.py
src/bungee_msgs/msg/: BoolVector3.msg
